--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="author" content="karamem0">
+  <meta name="description" content="Online Markdown Editor for Microsoft 365">
+  <meta name="keywords" content="Markdown,Markdown Editor,Microsoft,Microsoft 365,Office 365,OneDrive">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@karamem0">
+  <meta name="twitter:creator" content="@karamem0">
+  <meta property="og:url" content="%VITE_PUBLIC_URL%" />
+  <meta property="og:title" content="Hitofude" />
+  <meta property="og:description" content="Online Markdown Editor for Microsoft 365" />
+  <meta property="og:image" content="%VITE_PUBLIC_URL%/assets/Books.svg" />
   <title>Hitofude - Online Markdown Editor for Microsoft 365</title>
 </head>
 
