--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="%VITE_PUBLIC_URL%" />
   <meta property="og:title" content="Hitofude" />
   <meta property="og:description" content="Online Markdown Editor for Microsoft 365" />
-  <meta property="og:image" content="%VITE_PUBLIC_URL%/assets/Books.svg" />
+  <meta property="og:image" content="%VITE_PUBLIC_URL%/assets/screenshot.png" />
   <title>Hitofude - Online Markdown Editor for Microsoft 365</title>
 </head>
 
